@@ -222,6 +222,12 @@ handle.dir = ${dspace.dir}/handle-server
 plugin.sequence.org.dspace.eperson.AuthenticationMethod = \
         org.dspace.eperson.PasswordAuthentication
 
+#### PasswordAuthentication options ####
+# Only emails ending in the following domains are allowed to self-register
+# Example - example.com domain : @example.com
+# Example - MIT domain and all .ac.uk domains: @mit.edu, .ac.uk
+# authentication.password.domain.valid = example.com
+
 #### Example of configuring X.509 authentication
 #### (to use it, add org.dspace.eperson.X509Authentication to auth stack above)
 
